--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   <header>
     <nav class="navbar navbar-expand-lg navigation-wrap">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images\zippie-logo.png" height="50" width="auto"></a>
+        <a class="navbar-brand" href="index.html"><img src="images\zippie-logo.png" height="50" width="auto"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="#navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-stream navbar-toggler-icon"></i>
+          <i class="fas fa-stream"></i>
 
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -57,7 +57,7 @@
             <li class="nav-item">
               <a class="nav-link" href="cart.html">Cart <i class="fa-solid fa-cart-shopping"></i></a>
             </li>
-            <li><button class="main-btn">Login</button></li>
+            <li><a href="login.html"><button class="main-btn">Login</button></a></li>
           </ul>
         </div>
       </div>
@@ -75,8 +75,7 @@
               a very short period of time.</p>
             <div class="mt-4">
               <button class="main-btn">Order Now <i class="fas fa-angle-right ps-3"></i></button>
-              <button class="white-btn ms-lg-4 mt-lg-0 mt-4">Go to Cart <i
-                  class="fa-solid fa-cart-shopping"></i></button>
+              <a class href="UserProfile.html"><button class="white-btn ms-lg-4 mt-lg-0 mt-4">Your Profile <i class="fa-solid fa-user"></i></button></a>
             </div>
           </div>
         </div>
@@ -118,6 +117,55 @@
     </section>
   </section>
 
+  <!-- <div class="card" style="width: 18rem;">
+    <img src="images\pasta.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div> -->
+
+<!-- Food Cards Section  -->
+<section>
+<div class="gallery">
+  <div class="content">
+    <img src="images\rice.jpg" width="300">
+    <h3>Shrimp Fried Rice</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ad.</p>
+    <h6>$7</h6>
+    <button class="buy-1">Add to Cart</button>
+  </div>
+</div>
+
+<div class="gallery">
+  <div class="content">
+    <img src="images\pasta2.jpg" width="300">
+    <h3>Pasta-Fettuccine</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ad.</p>
+    <h6>$15</h6>
+    <button class="buy-1">Add to Cart</button>
+  </div>
+</div>
+
+<div class="gallery">
+  <div class="content">
+    <img src="images\stirfriedricenoodles.jpg" width="300">
+    <h3>Stir Fried Rice Noodlese</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ad.</p>
+    <h6>$12</h6>
+    <button class="buy-1">Add to Cart</button>
+  </div>
+</div>
+
+<div class="gallery">
+  <div class="content">
+    <img src="images\potatofries.jpg" width="300">
+    <h3>Potato Fries</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ad.</p>
+    <h6>$6</h6>
+    <button class="buy-1">Add to Cart</button>
+  </div>
+</div>
+</section>
 
   <!-- Section Footer  -->
   <footer id="footer">
