--- a/cart.html
+++ b/cart.html
@@ -24,16 +24,16 @@
     <header>
         <nav class="navbar navbar-expand-lg navigation-wrap">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="images\zippie-logo.png" height="50" width="auto"></a>
+                <a class="navbar-brand" href="index.html"><img src="images\zippie-logo.png" height="50" width="auto"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="#navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-stream navbar-toggler-icon"></i>
+                    <i class="fas fa-stream"></i>
 
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
@@ -57,7 +57,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="cart.html">Cart <i class="fa-solid fa-cart-shopping"></i></a>
                         </li>
-                        <li><button class="main-btn">Login</button></li>
+                        <li><a href="login.html"><button class="main-btn">Login</button></a></li>
                     </ul>
                 </div>
             </div>
